--------------------------------------------------------------------------------------------------
Release notes version 1.8.5_beta : Enhancements, modifications and corrected bugs since version 1.8.4 :
--------------------------------------------------------------------------------------------------
06/05/22 (TRUST)  New keyword : Equation option "disable_equation_residual 0|1" to not use current equation residual when computing problem residual (useful for permanent KEps simulation when residuals don't decrease)
05/05/22 (TRUST)  Portability : Ubuntu 22 supported (VisIt issues though)
05/05/22 (TRUST)  Portabilty  : Fedora 36 and GNU compilers 12.0.1 are supported
04/05/22 (TRUST)  New keyword : Champ_Front_Tabule_Lu is a new boundary field that can be used to create a Champ_Front_Tabule field from a column file. Syntax : Champ_Front_Tabule_Lu nb_comp your_file
04/05/22 (TRUST)  New feature : Add list of low-storage/classical time Runge-Kutta schemes with order 2,3 and 4.
03/05/22 (TRUST)  New keyword : Definition_champs_fichier { file filename } to read definition_champs from a file
03/05/22 (TRUST)  Major Change: Class and SFINAE templates are introduced to factorize the implementation of TRUST Don fields.
20/04/22 (TRUST)  New keyword : Partition_tool Fichier_MED: allows to split a domain according to an integer field (giving the proc number of each element) stored in a MED file.
07/04/22 (TRUST)  Major Change: TRUST int/double Arrays, Vects, Tabs and Travs are now class templates
01/04/22 (TRUST)  New feature : New implementation of Champ_fonc_tabule_morceaux. Allows to use multiple parameter fields and improve performance.
28/03/22 (TRUST)  Fix         : Champ_front_synt boundary condition had some bugs which are fixed now, parameter p ranamed to KeOverKmin.
28/03/22 (TRUST)  Major Change: Pb_Multiphase can handle arbitrary additional equations (LIST) to handle turbulence modelling